--- a/index.html
+++ b/index.html
@@ -6,8 +6,77 @@
     <title>PHero Tube</title>
     <link href="https://cdn.jsdelivr.net/npm/daisyui@3.6.4/dist/full.css" rel="stylesheet" type="text/css" />
 <script src="https://cdn.tailwindcss.com"></script>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
+
+<script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          colors: {
+            clifford: '#da373d',
+          }
+        }
+      }
+    }
+  </script>
+
+<style>
+    .font-inter{
+        font-family: 'Inter', sans-serif;
+    }
+</style>
 </head>
-<body>
-    <h2 class="text-6xl">PHero tube assignment</h2>
+<body class="mx-16 mt-14 bg-[#FFF]">
+    <header>
+        <nav class="flex justify-between border-b border-gray-400 pb-8">
+            <div>
+                <img src="./image/Logo.png" alt="">
+            </div>
+
+            <div class="px-5 py-3 rounded-lg bg-gray-400">
+                <p class="text-[#252525] text-lg font-medium font-inter">Sort by view</p>
+            </div>
+
+            <div class="px-5 py-3 rounded-lg bg-[#FF1F3D]">
+                <p class="font-inter font-medium text-[#FFF] text-lg">Blog</p>
+            </div>
+        </nav>
+    </header>
+
+    <main>
+
+        
+        <div id="category-name" class="flex justify-center gap-6 mt-8 mb-10">
+            
+        </div>
+
+        <div id="card-container" class=" grid md:grid-cols-2 lg:grid-cols-4 gap-6">
+
+            <!-- <div class="card-compact w-96 pb-6">
+                <figure class=""><img class="rounded-lg" src="https://i.ibb.co/ZNggzdm/cake.jpg" alt="Shoes" /></figure>
+                <div class="">
+                  <div class="flex gap-3 mt-5">
+                        <img class="w-12 rounded-full" src="https://i.ibb.co/k4tkc42/oliviar-harris.jpg" alt="">
+                    <h3 class="text-[#171717] font-inter font-bold text-base mr-2">Building a Winning UX Strategy Using the Kano Model</h3>
+                  </div>
+
+                  <div class="flex gap-2 mt-2 ml-14">
+                   <p>Awlad Hossain</p>
+                    <h1>V</h1>
+                  </div>
+                  <p class="ml-14 mt-2">91K views</p>
+                </div>
+              </div> -->
+
+        </div>
+
+    </main>
+
+    <footer></footer>
+
+
+    <script src="js/index.js"></script>
 </body>
 </html>
