added new js code

--- a/blog.html
+++ b/blog.html
@@ -17,13 +17,13 @@
     </style>
 </head>
 <!-- bg-[#F9F6E2] -->
-<body class="py-24  bg-[#FFF]">
+<body class="py-12 mx-8 md:mx-12 lg:py-24 bg-[#FFF]">
     
-    <h1 class="text-5xl text-[#E527B2] font-bold font-inter text-center">All the Blog Questions Answers are here</h1>
+    <h1 class="text-3xl lg:text-5xl text-[#E527B2] font-bold font-inter text-center">All the Blog Questions Answers are here</h1>
 <main class="container mx-auto">
     
     <div class="space-y-12 mt-24">
-        <h3 class="text-2xl text-[#111] font-bold font-inter text-center"><span class="text-[#E55473]">Question-1</span>
+        <h3 class="text-xl lg:text-2xl text-[#111] font-bold font-inter text-center"><span class="text-[#E55473]">Question-1</span>
                  Dicusss the scope of var, let and const</h3>
         <p class="text-[#111] font-inter font-semibold text-xl">
             Var declarations are globally scoped or function/locally scoped. This means that any variable that is declared with var outside a function block is available for use in the whole window.var variables can be updated and re-declared within its scope . Scope essentially means where these variables are available for use. It is a function scoped when it is declared within a function. This means that this is available and can be accessed only within that function. So if I declare a var in global space  I would access the var without any doubt but what would be if I declare the same var in a function and want to access it from outside the function? I will get an error because the var is not in the global scope.
@@ -79,7 +79,7 @@ So null is like a way to inform I know something is missing and that's what I wa
                     A REST API, or Representational State Transfer Application Programming Interface, is an architectural style for building web services that allows different systems to communicate with each other over the internet. <br><br>
 
 Principles of REST Architecture:<br><br>
-1- Uniform interface: Rest APIs have a uniform interface which means that the communication between clients and servers is done using standard protocols and formats. 
+ Uniform interface: Rest APIs have a uniform interface which means that the communication between clients and servers is done using standard protocols and formats. 
 
 Stateless: REST APIs are stateless, meaning that each request from a client to a server contains all the information needed to understand and process that request.<br><br>
 Client-Server:  The client-server architecture is a fundamental principle of REST. This allows for more flexibility as the client and server can evolve independently.<br><br>
