--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     }
 </style>
 </head>
-<body id="body" class="mx-6 lg:mx-16 mt-14 bg-[#FFF] mb-12 lg:mb-32">
+<body id="body" class="mx-6 md:mx-10 lg:mx-16 mt-14 bg-[#FFF] mb-12 lg:mb-32">
     <header>
         <nav class="flex flex-col md:flex-row lg:flex-row justify-between  border-b border-[#11111121] pb-8">
             <div>
